Agentforce/force-app/main/default/objects/Bid_Phase__c/Bid_Phase__c.object-meta.xml
<CustomObject>
    <label>Bid Phase</label>
    <nameField>
        <label>Phase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid Phases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>