Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <inlineHelpText>Summary of all users assigned to this Bid Phase, regardless of Role.</inlineHelpText>
    <label>Assigned Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>