Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipName>Plan_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>