Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Bid_Manager_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager_Rollup__c</fullName>
    <description>Populated by DLRS</description>
    <label>Bid Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>