Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/BidPhaseCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>BidPhaseCaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>BidPhaseCaseSafeID</label>
    <type>Text</type>
</CustomField>