Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>Ticked if the Phase&apos;s Status is either Completed or Cancelled.</description>
    <formula>OR(
				ISPICKVAL(Status__c, &quot;Completed&quot;),
				ISPICKVAL(Status__c, &quot;Cancelled&quot;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>