Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Design_Support_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Design_Support_Rollup__c</fullName>
    <description>Populated by DLRS</description>
    <label>Design Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>