Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/No_of_Assigned_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assigned_Bid_Supports__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS.</description>
    <label># Assigned Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>