Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/No_of_Business_Days_Until_End_Date__c.field-meta.xml
<CustomField>
    <fullName>No_of_Business_Days_Until_End_Date__c</fullName>
    <formula>IF(TODAY() &lt; End_Date__c,

(5 * ( FLOOR( ( End_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( End_Date__c - DATE( 1900, 1, 8), 7 ) ) )
 

-
 

(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
			
			 , 0) /* End portion of IF */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For a Phase where the End Date is in the future calculate the number of working days between now until the End Date.</inlineHelpText>
    <label># Business Days Until End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>