Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/No_of_Days_Until_End_Date__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Until_End_Date__c</fullName>
    <formula>IF(TODAY() &lt; End_Date__c, End_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the End Date has not already passed then calculate the number of days until the end date. If the End Date has already passed then return 0.</inlineHelpText>
    <label># Days Until End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>