Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Not_Resourced__c.field-meta.xml
<CustomField>
    <fullName>Not_Resourced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticked where the Bid Team have decided not to resource the Bid Phase</inlineHelpText>
    <label>Not Resourced</label>
    <type>Checkbox</type>
</CustomField>