Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <displayFormat>BP-{0000}</displayFormat>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>