Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/System_Bid_Phase_Assignment_Permission__c.field-meta.xml
<CustomField>
    <fullName>System_Bid_Phase_Assignment_Permission__c</fullName>
    <description>Ticked if the user has permission to assign Bid Phases. Otherwise false.
Used in visibility criteria on the Bid Phase Record Page because App Builder is bad at identifying where a user does NOT have a permission assigned.</description>
    <formula>$Permission.Create_Bid_Phase_Assignment</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: Bid Phase Assignment Permission</label>
    <type>Checkbox</type>
</CustomField>