Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/System_Days_Until_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>System_Days_Until_Start_Date__c</fullName>
    <description>Where Start Date is in the future calculate days until Start Date. Used to trigger Scheduled Flow to set Status Imminent.</description>
    <formula>IF( Start_Date__c &gt;= TODAY(), Start_Date__c - TODAY(),		0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: Days Until Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>