Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/System_End_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>System_End_Date_Passed__c</fullName>
    <description>Used as trigger for Scheduled Flow to set Status. Ticked when End Date has passed.</description>
    <formula>End_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: End Date Passed</label>
    <type>Checkbox</type>
</CustomField>