Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/System_New_Bid_Support_Link__c.field-meta.xml
<CustomField>
    <fullName>System_New_Bid_Support_Link__c</fullName>
    <description>Used in View and Edit Planning Phase screenflow to allow users to request Bid Support for a specific Planning Phase record.</description>
    <formula>IF(
				AND(
								 $Permission.Create_Bid_Support = TRUE,
								 $Permission.Edit_Opportunity = TRUE,
								 No_of_Bid_Management_Bid_Supports__c &lt; 1,
								TEXT(Type__c) != &quot;SQ/RFI&quot;,
								TEXT(Type__c) != &quot;ITT/RFP&quot;,
								TEXT(Type__c) != &quot;Mobilisation&quot;,
								End_Date__c &gt;= TODAY()
								),
HYPERLINK(
				&quot;/lightning/action/quick/Bid_Phase__c.New_Bid_Support?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot; &amp; CASESAFEID(Id) &amp; &quot;&amp;backgroundContext=%2Flightning%2Fr%2FOpportunity%2F&quot; &amp; CASESAFEID(Opportunity__c) &amp; &quot;%2Fview&quot;,
				&quot;New Bid Support&quot;,
				&quot;_self&quot;),
				NULL
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: New Bid Support Link</label>
    <type>Text</type>
</CustomField>