Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/System_Start_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>System_Start_Date_Passed__c</fullName>
    <formula>TODAY() &gt; Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: Start Date Passed</label>
    <type>Checkbox</type>
</CustomField>