Agentforce/force-app/main/default/objects/Bid_Phase__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Value copied from Type field into Name field by Before Save Flow to keep continuous alignment.
User sets type using Picklist field and this is then copied to Name so that the link to open a record is identifiable to the user rather than an auto-number.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>SQ/RFI</fullName>
            </value>
            <value>
                <fullName>Dialogue</fullName>
            </value>
            <value>
                <fullName>ITT/RFP</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Negotiation/BAFO</fullName>
            </value>
            <value>
                <fullName>Mobilisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>