Agentforce/force-app/main/default/objects/Bid_Phase__c/validationRules/EndDate_not_before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_not_before_StartDate</fullName>
    <active>true</active>
    <description>End Date cannot be before Start Date</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				End_Date__c &lt; Start_Date__c
				)</errorConditionFormula>
    <errorMessage>End Date cannot be before the Start Date. Please check the dates and try again.</errorMessage>
</ValidationRule>