Agentforce/force-app/main/default/objects/Bid_Phase__c/validationRules/Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Required</fullName>
    <active>true</active>
    <description>Opportunity Lookup must be populated.</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				ISBLANK(Opportunity__c)
				)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>The Phase must be linked to an Opportunity.</errorMessage>
</ValidationRule>