Agentforce/force-app/main/default/objects/Bid_Phase__c/validationRules/RFI_End_Before_Award_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RFI_End_Before_Award_Date</fullName>
    <active>true</active>
    <description>Trigger only where End Date is changed</description>
    <errorConditionFormula>AND(
$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
TEXT(Type__c) = &quot;SQ/RFI&quot;,
End_Date__c &gt; Opportunity__r.CloseDate,
ISCHANGED(End_Date__c)
)</errorConditionFormula>
    <errorMessage>RFI End Date must be before Award Date</errorMessage>
</ValidationRule>