Agentforce/force-app/main/default/objects/Bid_Phase__c/validationRules/RFI_End_Before_RFP_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>RFI_End_Before_RFP_Start</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				 TEXT(Type__c) = &quot;SQ/RFI&quot;,
				 End_Date__c &gt; Opportunity__r.RFP_Issue_Date__c
				)</errorConditionFormula>
    <errorMessage>RFI End Date must be before RFP Start Date</errorMessage>
</ValidationRule>