Agentforce/force-app/main/default/objects/Bid_Phase__c/validationRules/RFP_Start_After_RFI_End.validationRule-meta.xml
<ValidationRule>
    <fullName>RFP_Start_After_RFI_End</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
TEXT(Type__c) = &quot;ITT/RFP&quot;,
Start_Date__c &lt; Opportunity__r.RFI_Submission_Date__c
)</errorConditionFormula>
    <errorMessage>RFP Start Date must be after RFI End Date</errorMessage>
</ValidationRule>